@@ -1,3 +1,11 @@
+2023-08-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* support/regression/tests/bug-2855.c: disable for MacOS host test
+	* support/regression/tests/charconst.c,
+	  support/regression/tests/string.c,
+	  support/regression/tests/wchar.c.in: work around missing uchar.h
+	  on MacOS host test
+
 2023-08-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* support/scripts/sdcc.nsi: Remove unused/unbuilt simulators
